# magpie

./: .gitignore  Cargo.toml  LICENSE  flake.nix  justfile
dev/: docker-compose.yml
migrations/: 20230716104351_Initial.down.sql  20230716104351_Initial.up.sql
server/: Cargo.toml
server/migrations/2023-02-03-103815_initial/: down.sql  up.sql
server/src/: api.rs  config.rs  error.rs  main.rs  metadata.rs  scanner.rs  scheduler.rs
server/src/api/: mod.rs  response_container.rs  responses.rs  routes.rs
server/src/db/: mod.rs  models.rs  schema.rs
server/src/db/migrations/2023-02-26-115719_init/: down.sql  up.sql
server/src/db/models/: album.rs  artist.rs  genre.rs  mod.rs  track.rs
server/src/metadata/: mod.rs  scanner.rs
server/src/metadata/models/: artist.rs  track.rs
server/src/settings/: mod.rs
src/: cli.rs  config.rs  lib.rs  main.rs  metadata.rs  scanner.rs  scheduler.rs  settings.rs  web.rs
src/api/: dto.rs  mod.rs  response_container.rs  routes.rs
src/api/magpie/: dto.rs  mod.rs  routes.rs
src/api/subsonic/: dto.rs  mod.rs  routes.rs  system.rs
src/database/: mod.rs  schema.rs
src/database/migrations/2024-06-18-175320_initial/: down.sql  up.sql
src/db/: mod.rs  schema.rs
src/db/migrations/2023-02-26-115719_init/: down.sql  up.sql
src/db/migrations/2024-01-26-175959_create_users/: up.sql
src/db/migrations/2024-01-26-182645_initial/: down.sql  up.sql
src/db/models/: album.rs  artist.rs  genre.rs  mod.rs  track.rs
src/error/: mod.rs
src/metadata/: mod.rs  scanner.rs
src/metadata/models/: album.rs  artist.rs  mod.rs  track.rs
src/server/: mod.rs
src/settings/: mod.rs
swoop/: Cargo.toml  Dioxus.toml
swoop/public/assets/: style.css
swoop/src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
web/: package-lock.json  package.json  tailwind.config.js
web/src/: App.vue  main.ts  store.ts
web/src/components/: AlbumList.vue  ArtistList.vue  Body.vue  NavBarDesktop.vue  Player.vue  TheWelcome.vue  Tracks.vue
web/src/router/: index.ts
web/src/views/: HomeView.vue  TrackView.vue
