[package]
name = "magpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
config = "0.13.4"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.4" }
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18"
diesel = { version = "2.1.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.1.0"
walkdir = "2.4.0"
lofty = "0.18.2"
