[package]
name = "magpie"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
lofty = "0.11.0"
serde = { version = "1.0.152", features = ["derive"] }
diesel = { version = "2.0.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
anyhow = "1.0.68"
log = "0.4.17"
env_logger = "0.10.0"
config = "0.13.3"
