[package]
name = "swoop"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
gloo = "0.10.0"
dioxus-router = "0.4.1"
dioxus-logger = "0.4.1"
log = "0.4.20"
web-sys = "0.3.64"
reqwest = { version = "0.11.20", features = ["serde_json", "json"] }
serde = { version = "1", features = ["derive"] }
magpie_types = { path = "../types" }
